--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -109,3 +109,21 @@ body
 					p 
 						font-size .8rem
 						margin-top .2rem
+				.switch-btn
+					position relative
+					box-sizing border-box
+					display inline-block
+					background-color #ccc
+					border-radius 4px
+					width 50px
+					height 20px
+					margin 0 .5rem
+					.switch-btn-control
+						top 0
+						left 0
+						border-radius @border-radius
+						position absolute
+						background-color blue1
+						display inline-block
+						width 50%
+						height 100%
