--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -60,6 +60,7 @@ body
 		background-color yellow1
 		border-bottom-right-radius 100%
 	.simon-menu
+		box-shadow @box-shadow
 		box-sizing border-box
 		position absolute
 		background-color dark
@@ -85,6 +86,7 @@ body
 				display flex
 				justify-content center
 				.simon-screen
+					border-radius 4px
 					background-color dark
 					color #fff
 					width 50px
@@ -127,3 +129,4 @@ body
 						display inline-block
 						width 50%
 						height 100%
+						cursor pointer
