cache DOM in app.js

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -27,6 +27,10 @@ body
 	width 800px
 	margin 0 auto
 	
+::selection
+	background-color dark
+	color #fff
+	
 //------------------- Simon Game Styles ----------------------//
 .simon
 	position relative
