--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,14 @@ body {
   width: 800px;
   margin: 0 auto;
 }
+::-moz-selection {
+  background-color: #212121;
+  color: #fff;
+}
+::selection {
+  background-color: #212121;
+  color: #fff;
+}
 .simon {
   position: relative;
   width: 400px;
