--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,10 @@ body {
       -ms-flex-line-pack: center;
           align-content: center;
   box-shadow: 10px 10px 50px 2px #000;
+  -webkit-animation-name: show-simon;
+          animation-name: show-simon;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
 }
 .simon .field {
   width: 173.91304347826087px;
@@ -144,21 +148,21 @@ body {
   width: 20px;
   height: 20px;
   border-radius: 100%;
-  border: none;
+  border: 4px solid #212121;
   box-shadow: 2px 2px 7px 1px #212121;
   transition-duration: 0.3s;
 }
 .simon .simon-menu .simon-menu-box .row-items .btn-box button[value='start'] {
-  background-color: #d50000;
+  background: #d50000;
 }
 .simon .simon-menu .simon-menu-box .row-items .btn-box button[value='strict'] {
   background-color: #ff0;
 }
-.simon .simon-menu .simon-menu-box .row-items .btn-box button[value='start'].clicked {
-  background-color: #e55454;
-}
-.simon .simon-menu .simon-menu-box .row-items .btn-box button[value='strict'].clicked {
-  background-color: #ffe273;
+.simon .simon-menu .simon-menu-box .row-items .btn-box button.clicked {
+  -webkit-transform: scale(0.9, 0.9);
+      -ms-transform: scale(0.9, 0.9);
+          transform: scale(0.9, 0.9);
+  box-shadow: 1px 1px 10px 1px #212121;
 }
 .simon .simon-menu .simon-menu-box .row-items .btn-box p {
   font-size: 0.8rem;
@@ -193,4 +197,36 @@ body {
   -webkit-transform: translateX(-200%);
       -ms-transform: translateX(-200%);
           transform: translateX(-200%);
+}
+footer {
+  width: 100%;
+  background-color: #b71c1c;
+}
+@-webkit-keyframes show-simon {
+  0% {
+    -webkit-transform: translateY(25%) scale(0, 0) rotate(360deg);
+            transform: translateY(25%) scale(0, 0) rotate(360deg);
+  }
+  70% {
+    -webkit-transform: translateY(25%) scale(1.1, 1.1) rotate(-45deg);
+            transform: translateY(25%) scale(1.1, 1.1) rotate(-45deg);
+  }
+  100% {
+    -webkit-transform: translateY(25%) scale(1, 1) rotate(0deg);
+            transform: translateY(25%) scale(1, 1) rotate(0deg);
+  }
+}
+@keyframes show-simon {
+  0% {
+    -webkit-transform: translateY(25%) scale(0, 0) rotate(360deg);
+            transform: translateY(25%) scale(0, 0) rotate(360deg);
+  }
+  70% {
+    -webkit-transform: translateY(25%) scale(1.1, 1.1) rotate(-45deg);
+            transform: translateY(25%) scale(1.1, 1.1) rotate(-45deg);
+  }
+  100% {
+    -webkit-transform: translateY(25%) scale(1, 1) rotate(0deg);
+            transform: translateY(25%) scale(1, 1) rotate(0deg);
+  }
 }
