--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -33,6 +33,7 @@ body
 	
 //------------------- Rotation-Box Styles ----------------------//
 #rotation-box
+	opacity 0
 	position relative
 	left 50%
 	transform translateX(-25%)
@@ -201,3 +202,4 @@ body
 		transform translateY(25%) scale(1, 1) rotate(0deg)
 	}
 }
+
